Unified LB code paths for managing region replicas, added a new model for LB <-> cost function interactions and fixed remaning TODO's for LB to work with region replicas respecting server, host and rack availability